[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg-menus"
description = "Make menus with Buttons and Labels inside Pygame easily!"
keywords = ["button", "label", "menu"]
authors = [
  {name = "Chris"}
]
maintainers = [
  {name = "Chris"}
]
requires-python = ">= 3.8"
dependencies = [
  "pygame",
]
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/christianlde/pg_menus"